--- a/INDEX.html
+++ b/INDEX.html
@@ -16,7 +16,7 @@
         <div class="navbar" id="navigation">
             <!--<img class="image"src="" width="23px" height="23px"alt=""> -->
             <ul>
-                <li><a href="INDEX.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Shop.html">Shop</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Contact.html">Contact</a></li>
