--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <img id="pay" src="Pay Pal.png" alt="">
         </div>
         <div class="copyright">
-            <p><i class="fa fa-copyright"></i>2024,Tech2 etc- HTML CSS Javascript Ecommerce Template By Sasmita Ghadai</p>
+            <p><i class="fa fa-copyright"></i>2024,HTML CSS Javascript Ecommerce Website Designed By Sasmita Ghadai</p>
         </div>
     </footer>
 </body>
